--- a/interfaces/SendAutomaticInput.html
+++ b/interfaces/SendAutomaticInput.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>SendAutomaticInput | gsOTP.com Node.js SDK Documents - v1.0.0</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.0.0">
+	<title>SendAutomaticInput | gsOTP.com Node.js SDK Documents - v1.1.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.0.0</a></strong>
+					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.1.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2803,7 +2803,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.templateID</p>
 					<ul>
-						<li>Defined in types.ts:12</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L13">types.ts:13</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2814,7 +2814,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.countryCode</p>
 					<ul>
-						<li>Defined in types.ts:13</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L14">types.ts:14</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2825,7 +2825,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.mobile</p>
 					<ul>
-						<li>Defined in types.ts:14</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L15">types.ts:15</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2836,7 +2836,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.param1</p>
 					<ul>
-						<li>Defined in types.ts:15</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L16">types.ts:16</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2847,7 +2847,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.param2</p>
 					<ul>
-						<li>Defined in types.ts:16</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L17">types.ts:17</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2858,7 +2858,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.param3</p>
 					<ul>
-						<li>Defined in types.ts:17</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L18">types.ts:18</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2869,7 +2869,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.expireTime</p>
 					<ul>
-						<li>Defined in types.ts:18</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L19">types.ts:19</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2879,7 +2879,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:26</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L27">types.ts:27</a></li>
 					</ul>
 				</aside>
 			</section>
