--- a/interfaces/VerifyRequest.html
+++ b/interfaces/VerifyRequest.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>VerifyRequest | gsOTP.com Node.js SDK Documents - v1.0.0</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.0.0">
+	<title>VerifyRequest | gsOTP.com Node.js SDK Documents - v1.1.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.0.0</a></strong>
+					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.1.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2777,9 +2777,14 @@ img {
 				<div class="tsd-signature tsd-kind-icon">country<wbr>Code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:52</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L54">types.ts:54</a></li>
 					</ul>
 				</aside>
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>The user mobile number country code</p>
+					</div>
+				</div>
 			</section>
 			<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 				<a name="mobile" class="tsd-anchor"></a>
@@ -2787,9 +2792,14 @@ img {
 				<div class="tsd-signature tsd-kind-icon">mobile<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:53</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L56">types.ts:56</a></li>
 					</ul>
 				</aside>
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>The user mobile number</p>
+					</div>
+				</div>
 			</section>
 			<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 				<a name="otp" class="tsd-anchor"></a>
@@ -2797,9 +2807,14 @@ img {
 				<div class="tsd-signature tsd-kind-icon">otp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:54</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L58">types.ts:58</a></li>
 					</ul>
 				</aside>
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>The code that user entered</p>
+					</div>
+				</div>
 			</section>
 		</section>
 		<footer class="with-border-bottom">
