--- a/interfaces/OTPStatusRequest.html
+++ b/interfaces/OTPStatusRequest.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>OTPStatusRequest | gsOTP.com Node.js SDK Documents - v1.0.0</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.0.0">
+	<title>OTPStatusRequest | gsOTP.com Node.js SDK Documents - v1.1.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.0.0</a></strong>
+					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.1.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2769,7 +2769,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPReferenceID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">bigint</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:58</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L62">types.ts:62</a></li>
 					</ul>
 				</aside>
 			</section>
