--- a/interfaces/OTPStatusResponse.html
+++ b/interfaces/OTPStatusResponse.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>OTPStatusResponse | gsOTP.com Node.js SDK Documents - v1.0.0</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.0.0">
+	<title>OTPStatusResponse | gsOTP.com Node.js SDK Documents - v1.1.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.0.0</a></strong>
+					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.1.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2777,7 +2777,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPMethod<span class="tsd-signature-symbol">:</span> <a href="../modules.html#OTPMethod" class="tsd-signature-type" data-tsd-kind="Type alias">OTPMethod</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:63</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L67">types.ts:67</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2792,7 +2792,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPStatus<span class="tsd-signature-symbol">:</span> <a href="../modules.html#OTPStatus" class="tsd-signature-type" data-tsd-kind="Type alias">OTPStatus</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:65</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L69">types.ts:69</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2807,7 +2807,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPVerified<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:67</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L71">types.ts:71</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
