--- a/modules.html
+++ b/modules.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gsOTP.com Node.js SDK Documents - v1.0.0 | gsOTP.com Node.js SDK Documents - v1.0.0</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.0.0">
+	<title>gsOTP.com Node.js SDK Documents - v1.1.0 | gsOTP.com Node.js SDK Documents - v1.1.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="index.html">gsOTP.com Node.js SDK Documents - v1.0.0</a></strong>
+					<strong><a href="index.html">gsOTP.com Node.js SDK Documents - v1.1.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2736,10 +2736,14 @@ img {
 <div class="container container-main">
 	<div class="content-wrap">
 		<div class="tsd-panel tsd-typography">
-			<p>بسم الله الرّحمن الرّحیم</p>
-			<a href="#gsotp-nodejs-sdk" id="gsotp-nodejs-sdk" style="color: inherit; text-decoration: none;">
-				<h1>gsOTP Node.js SDK</h1>
+			<p dir="rtl">بسم الله الرّحمن الرّحیم</p>
+			<a href="#gsotpcom-nodejs-sdk" id="gsotpcom-nodejs-sdk" style="color: inherit; text-decoration: none;">
+				<h1><a href="gsOTP.com">gsOTP.com</a> Node.js SDK</h1>
 			</a>
+			<a href="#documents" id="documents" style="color: inherit; text-decoration: none;">
+				<h2>Documents</h2>
+			</a>
+			<p><a href="https://globalsmartotp.github.io/nodejs-lib">Full documentation is here.</a></p>
 			<a href="#simple-usage-example" id="simple-usage-example" style="color: inherit; text-decoration: none;">
 				<h2>Simple usage example</h2>
 			</a>
@@ -2766,8 +2770,14 @@ img {
 				<h3>Verify OTP Code</h3>
 			</a>
 			<pre><code class="language-js"><span style="color: #001080">otp</span><span style="color: #000000">.</span><span style="color: #795E26">verify</span><span style="color: #000000">({</span>
-<span style="color: #000000">  </span><span style="color: #001080">mobile:</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;09373495980&#039;</span><span style="color: #000000">,</span>
+<span style="color: #000000">  </span><span style="color: #001080">mobile:</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;09333333333&#039;</span><span style="color: #000000">,</span>
 <span style="color: #000000">  </span><span style="color: #001080">otp:</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;3305&#039;</span><span style="color: #000000">,</span>
+<span style="color: #000000">})</span>
+<span style="color: #000000">.</span><span style="color: #795E26">then</span><span style="color: #000000">(() </span><span style="color: #0000FF">=&gt;</span><span style="color: #000000"> {</span>
+<span style="color: #000000">  </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;Code is correct!&#039;</span><span style="color: #000000">)</span>
+<span style="color: #000000">})</span>
+<span style="color: #000000">.</span><span style="color: #795E26">catch</span><span style="color: #000000">(() </span><span style="color: #0000FF">=&gt;</span><span style="color: #000000"> {</span>
+<span style="color: #000000">  </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;Can not verify&#039;</span><span style="color: #000000">)</span>
 <span style="color: #000000">})</span>
 </code></pre>
 		</div>
@@ -2810,9 +2820,14 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPMethod<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;sms&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;ivr&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;email&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;gap&quot;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:6</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L7">types.ts:7</a></li>
 					</ul>
 				</aside>
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>OTP Sending type</p>
+					</div>
+				</div>
 			</section>
 			<section class="tsd-panel tsd-member tsd-kind-type-alias">
 				<a name="OTPStatus" class="tsd-anchor"></a>
@@ -2820,7 +2835,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPStatus<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;pending&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;sent&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;deliver&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;failed&quot;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:7</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L8">types.ts:8</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2830,7 +2845,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">Send<wbr>Input&lt;IsManual&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IsManual</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type">true</span><span class="tsd-signature-symbol"> ? </span><a href="interfaces/SendManualyInput.html" class="tsd-signature-type" data-tsd-kind="Interface">SendManualyInput</a><span class="tsd-signature-symbol"> : </span><a href="interfaces/SendAutomaticInput.html" class="tsd-signature-type" data-tsd-kind="Interface">SendAutomaticInput</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in types.ts:29</li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L30">types.ts:30</a></li>
 					</ul>
 				</aside>
 				<h4 class="tsd-type-parameters-title">Type parameters</h4>
