--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gsOTP.com Node.js SDK Documents - v1.1.0 | gsOTP.com Node.js SDK Documents - v1.1.0</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.0">
+	<title>gsOTP.com Node.js SDK Documents - v1.1.2 | gsOTP.com Node.js SDK Documents - v1.1.2</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.2">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="index.html">gsOTP.com Node.js SDK Documents - v1.1.0</a></strong>
+					<strong><a href="index.html">gsOTP.com Node.js SDK Documents - v1.1.2</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2738,19 +2738,21 @@ img {
 		<div class="tsd-panel tsd-typography">
 			<p dir="rtl">بسم الله الرّحمن الرّحیم</p>
 			<a href="#gsotpcom-nodejs-sdk" id="gsotpcom-nodejs-sdk" style="color: inherit; text-decoration: none;">
-				<h1><a href="gsOTP.com">gsOTP.com</a> Node.js SDK</h1>
+				<h1><a href="https://gsotp.com">gsOTP.com</a> Node.js SDK</h1>
 			</a>
 			<a href="#documents" id="documents" style="color: inherit; text-decoration: none;">
 				<h2>Documents</h2>
 			</a>
 			<p><a href="https://globalsmartotp.github.io/nodejs-lib">Full documentation is here.</a></p>
-			<a href="#simple-usage-example" id="simple-usage-example" style="color: inherit; text-decoration: none;">
-				<h2>Simple usage example</h2>
+			<a href="#install" id="install" style="color: inherit; text-decoration: none;">
+				<h2>Install</h2>
 			</a>
+			<pre><code class="language-bash"><span style="color: #000000">npm install gsotp</span>
+</code></pre>
 			<a href="#send-otp-code" id="send-otp-code" style="color: inherit; text-decoration: none;">
-				<h3>Send OTP Code</h3>
+				<h2>Send OTP Code</h2>
 			</a>
-			<pre><code class="language-js"><span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">GsOTP</span><span style="color: #000000"> = </span><span style="color: #795E26">require</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;gsotp&#039;</span><span style="color: #000000">)</span>
+			<pre><code class="language-js"><span style="color: #0000FF">const</span><span style="color: #000000"> { </span><span style="color: #0070C1">GsOTP</span><span style="color: #000000"> } = </span><span style="color: #795E26">require</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;gsotp&#039;</span><span style="color: #000000">)</span>
 <span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">otp</span><span style="color: #000000"> = </span><span style="color: #0000FF">new</span><span style="color: #000000"> </span><span style="color: #795E26">GsOTP</span><span style="color: #000000">(</span><span style="color: #0070C1">API_KEY</span><span style="color: #000000">)</span>
 
 <span style="color: #001080">otp</span><span style="color: #000000">.</span><span style="color: #795E26">sendSMS</span><span style="color: #000000">({</span>
@@ -2767,7 +2769,7 @@ img {
 <span style="color: #000000">})</span>
 </code></pre>
 			<a href="#verify-otp-code" id="verify-otp-code" style="color: inherit; text-decoration: none;">
-				<h3>Verify OTP Code</h3>
+				<h2>Verify OTP Code</h2>
 			</a>
 			<pre><code class="language-js"><span style="color: #001080">otp</span><span style="color: #000000">.</span><span style="color: #795E26">verify</span><span style="color: #000000">({</span>
 <span style="color: #000000">  </span><span style="color: #001080">mobile:</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;09333333333&#039;</span><span style="color: #000000">,</span>
@@ -2821,7 +2823,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPMethod<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;sms&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;ivr&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;email&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;gap&quot;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L7">types.ts:7</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L7">types.ts:7</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2836,7 +2838,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPStatus<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;pending&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;sent&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;deliver&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;failed&quot;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L8">types.ts:8</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L8">types.ts:8</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2846,7 +2848,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">Send<wbr>Input&lt;IsManual&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IsManual</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type">true</span><span class="tsd-signature-symbol"> ? </span><a href="interfaces/SendManualyInput.html" class="tsd-signature-type" data-tsd-kind="Interface">SendManualyInput</a><span class="tsd-signature-symbol"> : </span><a href="interfaces/SendAutomaticInput.html" class="tsd-signature-type" data-tsd-kind="Interface">SendAutomaticInput</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/09c5c1e/src/types.ts#L30">types.ts:30</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L30">types.ts:30</a></li>
 					</ul>
 				</aside>
 				<h4 class="tsd-type-parameters-title">Type parameters</h4>
