--- a/classes/GsOTP.html
+++ b/classes/GsOTP.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>GsOTP | gsOTP.com Node.js SDK Documents - v1.1.2</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.2">
+	<title>GsOTP | gsOTP.com Node.js SDK Documents - v1.2.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.2.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.1.2</a></strong>
+					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.2.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2728,6 +2728,9 @@ img {
 			</ul>
 		</li>
 		<li class=" tsd-kind-interface">
+			<a href="../interfaces/OTPError.html" class="tsd-kind-icon">OTPError</a>
+		</li>
+		<li class=" tsd-kind-interface">
 			<a href="../interfaces/SendManualyInput.html" class="tsd-kind-icon">Send<wbr>Manualy<wbr>Input</a>
 		</li>
 		<li class=" tsd-kind-interface">
@@ -2750,6 +2753,9 @@ img {
 		</li>
 		<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 			<a href="../modules.html#SendInput" class="tsd-kind-icon">Send<wbr>Input</a>
+		</li>
+		<li class=" tsd-kind-function">
+			<a href="../modules.html#isGsOTPError" class="tsd-kind-icon">is<wbr>GsOTPError</a>
 		</li>
 	</ul>
 </nav>
@@ -2806,7 +2812,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/index.ts#L14">index.ts:14</a></li>
+								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/index.ts#L25">index.ts:25</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -2837,7 +2843,7 @@ img {
 								<h5>language: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &#x27;fa-IR&#x27;</span></h5>
 								<div class="tsd-comment tsd-typography">
 									<div class="lead">
-										<p>Target language for error messages.</p>
+										<p>Target language for showing error messages.</p>
 									</div>
 								</div>
 							</li>
@@ -2859,7 +2865,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/index.ts#L77">index.ts:77</a></li>
+								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/index.ts#L87">index.ts:87</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -2891,7 +2897,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/index.ts#L85">index.ts:85</a></li>
+								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/index.ts#L95">index.ts:95</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -2923,7 +2929,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/index.ts#L92">index.ts:92</a></li>
+								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/index.ts#L102">index.ts:102</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -2952,7 +2958,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/index.ts#L100">index.ts:100</a></li>
+								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/index.ts#L110">index.ts:110</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -2981,7 +2987,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/index.ts#L113">index.ts:113</a></li>
+								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/index.ts#L119">index.ts:119</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
