--- a/interfaces/SendManualyInput.html
+++ b/interfaces/SendManualyInput.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>SendManualyInput | gsOTP.com Node.js SDK Documents - v1.1.2</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.2">
+	<title>SendManualyInput | gsOTP.com Node.js SDK Documents - v1.2.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.2.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.1.2</a></strong>
+					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.2.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2706,6 +2706,9 @@ img {
 	<ul>
 		<li class=" tsd-kind-class tsd-has-type-parameter">
 			<a href="../classes/GsOTP.html" class="tsd-kind-icon">GsOTP</a>
+		</li>
+		<li class=" tsd-kind-interface">
+			<a href="OTPError.html" class="tsd-kind-icon">OTPError</a>
 		</li>
 		<li class="current tsd-kind-interface">
 			<a href="SendManualyInput.html" class="tsd-kind-icon">Send<wbr>Manualy<wbr>Input</a>
@@ -2757,6 +2760,9 @@ img {
 		<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 			<a href="../modules.html#SendInput" class="tsd-kind-icon">Send<wbr>Input</a>
 		</li>
+		<li class=" tsd-kind-function">
+			<a href="../modules.html#isGsOTPError" class="tsd-kind-icon">is<wbr>GsOTPError</a>
+		</li>
 	</ul>
 </nav>
 <div class="container container-main">
@@ -2803,7 +2809,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.templateID</p>
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L13">types.ts:13</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L16">types.ts:16</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2814,7 +2820,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.countryCode</p>
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L14">types.ts:14</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L17">types.ts:17</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2825,7 +2831,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.mobile</p>
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L15">types.ts:15</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L18">types.ts:18</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2836,7 +2842,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.param1</p>
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L16">types.ts:16</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L19">types.ts:19</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2847,7 +2853,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.param2</p>
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L17">types.ts:17</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L20">types.ts:20</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2858,7 +2864,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.param3</p>
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L18">types.ts:18</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L21">types.ts:21</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2869,7 +2875,7 @@ img {
 				<aside class="tsd-sources">
 					<p>Inherited from SendInputCommon.expireTime</p>
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L19">types.ts:19</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L22">types.ts:22</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2879,7 +2885,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L23">types.ts:23</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L26">types.ts:26</a></li>
 					</ul>
 				</aside>
 			</section>
