--- a/interfaces/OTPStatusRequest.html
+++ b/interfaces/OTPStatusRequest.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>OTPStatusRequest | gsOTP.com Node.js SDK Documents - v1.1.2</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.2">
+	<title>OTPStatusRequest | gsOTP.com Node.js SDK Documents - v1.2.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.2.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.1.2</a></strong>
+					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.2.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2708,6 +2708,9 @@ img {
 			<a href="../classes/GsOTP.html" class="tsd-kind-icon">GsOTP</a>
 		</li>
 		<li class=" tsd-kind-interface">
+			<a href="OTPError.html" class="tsd-kind-icon">OTPError</a>
+		</li>
+		<li class=" tsd-kind-interface">
 			<a href="SendManualyInput.html" class="tsd-kind-icon">Send<wbr>Manualy<wbr>Input</a>
 		</li>
 		<li class=" tsd-kind-interface">
@@ -2735,6 +2738,9 @@ img {
 		</li>
 		<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 			<a href="../modules.html#SendInput" class="tsd-kind-icon">Send<wbr>Input</a>
+		</li>
+		<li class=" tsd-kind-function">
+			<a href="../modules.html#isGsOTPError" class="tsd-kind-icon">is<wbr>GsOTPError</a>
 		</li>
 	</ul>
 </nav>
@@ -2769,7 +2775,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPReferenceID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">bigint</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L62">types.ts:62</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L65">types.ts:65</a></li>
 					</ul>
 				</aside>
 			</section>
