--- a/interfaces/OTPStatusResponse.html
+++ b/interfaces/OTPStatusResponse.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>OTPStatusResponse | gsOTP.com Node.js SDK Documents - v1.1.2</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.2">
+	<title>OTPStatusResponse | gsOTP.com Node.js SDK Documents - v1.2.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.2.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.1.2</a></strong>
+					<strong><a href="../index.html">gsOTP.com Node.js SDK Documents - v1.2.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2706,6 +2706,9 @@ img {
 	<ul>
 		<li class=" tsd-kind-class tsd-has-type-parameter">
 			<a href="../classes/GsOTP.html" class="tsd-kind-icon">GsOTP</a>
+		</li>
+		<li class=" tsd-kind-interface">
+			<a href="OTPError.html" class="tsd-kind-icon">OTPError</a>
 		</li>
 		<li class=" tsd-kind-interface">
 			<a href="SendManualyInput.html" class="tsd-kind-icon">Send<wbr>Manualy<wbr>Input</a>
@@ -2742,6 +2745,9 @@ img {
 		<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 			<a href="../modules.html#SendInput" class="tsd-kind-icon">Send<wbr>Input</a>
 		</li>
+		<li class=" tsd-kind-function">
+			<a href="../modules.html#isGsOTPError" class="tsd-kind-icon">is<wbr>GsOTPError</a>
+		</li>
 	</ul>
 </nav>
 <div class="container container-main">
@@ -2777,7 +2783,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPMethod<span class="tsd-signature-symbol">:</span> <a href="../modules.html#OTPMethod" class="tsd-signature-type" data-tsd-kind="Type alias">OTPMethod</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L67">types.ts:67</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L70">types.ts:70</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2792,7 +2798,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPStatus<span class="tsd-signature-symbol">:</span> <a href="../modules.html#OTPStatus" class="tsd-signature-type" data-tsd-kind="Type alias">OTPStatus</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L69">types.ts:69</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L72">types.ts:72</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2807,7 +2813,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPVerified<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L71">types.ts:71</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L74">types.ts:74</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
