--- a/modules.html
+++ b/modules.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gsOTP.com Node.js SDK Documents - v1.1.2 | gsOTP.com Node.js SDK Documents - v1.1.2</title>
-	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.1.2">
+	<title>gsOTP.com Node.js SDK Documents - v1.2.0 | gsOTP.com Node.js SDK Documents - v1.2.0</title>
+	<meta name="description" content="Documentation for gsOTP.com Node.js SDK Documents - v1.2.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">:root {
   --color-background: #fdfdfd;
@@ -2674,7 +2674,7 @@ img {
 		<div class="container">
 			<div class="table-wrap">
 				<div class="table-cell">
-					<strong><a href="index.html">gsOTP.com Node.js SDK Documents - v1.1.2</a></strong>
+					<strong><a href="index.html">gsOTP.com Node.js SDK Documents - v1.2.0</a></strong>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -2708,6 +2708,9 @@ img {
 			<a href="classes/GsOTP.html" class="tsd-kind-icon">GsOTP</a>
 		</li>
 		<li class=" tsd-kind-interface">
+			<a href="interfaces/OTPError.html" class="tsd-kind-icon">OTPError</a>
+		</li>
+		<li class=" tsd-kind-interface">
 			<a href="interfaces/SendManualyInput.html" class="tsd-kind-icon">Send<wbr>Manualy<wbr>Input</a>
 		</li>
 		<li class=" tsd-kind-interface">
@@ -2730,6 +2733,9 @@ img {
 		</li>
 		<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 			<a href="modules.html#SendInput" class="tsd-kind-icon">Send<wbr>Input</a>
+		</li>
+		<li class=" tsd-kind-function">
+			<a href="modules.html#isGsOTPError" class="tsd-kind-icon">is<wbr>GsOTPError</a>
 		</li>
 	</ul>
 </nav>
@@ -2771,16 +2777,45 @@ img {
 			<a href="#verify-otp-code" id="verify-otp-code" style="color: inherit; text-decoration: none;">
 				<h2>Verify OTP Code</h2>
 			</a>
-			<pre><code class="language-js"><span style="color: #001080">otp</span><span style="color: #000000">.</span><span style="color: #795E26">verify</span><span style="color: #000000">({</span>
+			<pre><code class="language-js"><span style="color: #0000FF">const</span><span style="color: #000000"> { </span><span style="color: #0070C1">GsOTP</span><span style="color: #000000">, </span><span style="color: #0070C1">isGsOTPError</span><span style="color: #000000"> } = </span><span style="color: #795E26">require</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;gsotp&#039;</span><span style="color: #000000">)</span>
+<span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">otp</span><span style="color: #000000"> = </span><span style="color: #0000FF">new</span><span style="color: #000000"> </span><span style="color: #795E26">GsOTP</span><span style="color: #000000">(</span><span style="color: #0070C1">API_KEY</span><span style="color: #000000">)</span>
+
+<span style="color: #001080">otp</span><span style="color: #000000">.</span><span style="color: #795E26">verify</span><span style="color: #000000">({</span>
 <span style="color: #000000">  </span><span style="color: #001080">mobile:</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;09333333333&#039;</span><span style="color: #000000">,</span>
 <span style="color: #000000">  </span><span style="color: #001080">otp:</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;3305&#039;</span><span style="color: #000000">,</span>
 <span style="color: #000000">})</span>
 <span style="color: #000000">.</span><span style="color: #795E26">then</span><span style="color: #000000">(() </span><span style="color: #0000FF">=&gt;</span><span style="color: #000000"> {</span>
 <span style="color: #000000">  </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;Code is correct!&#039;</span><span style="color: #000000">)</span>
 <span style="color: #000000">})</span>
-<span style="color: #000000">.</span><span style="color: #795E26">catch</span><span style="color: #000000">(() </span><span style="color: #0000FF">=&gt;</span><span style="color: #000000"> {</span>
-<span style="color: #000000">  </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;Can not verify&#039;</span><span style="color: #000000">)</span>
+<span style="color: #000000">.</span><span style="color: #795E26">catch</span><span style="color: #000000">(</span><span style="color: #001080">error</span><span style="color: #000000"> </span><span style="color: #0000FF">=&gt;</span><span style="color: #000000"> {</span>
+<span style="color: #000000">  </span><span style="color: #008000">// handle Error</span>
+<span style="color: #000000">  </span><span style="color: #AF00DB">if</span><span style="color: #000000"> (</span><span style="color: #795E26">isGsOTPError</span><span style="color: #000000">(</span><span style="color: #001080">error</span><span style="color: #000000">)) {</span>
+<span style="color: #000000">    </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">`Error </span><span style="color: #0000FF">${</span><span style="color: #001080">error</span><span style="color: #000000FF">.</span><span style="color: #001080">code</span><span style="color: #0000FF">}</span><span style="color: #A31515">: </span><span style="color: #0000FF">${</span><span style="color: #001080">error</span><span style="color: #000000FF">.</span><span style="color: #001080">message</span><span style="color: #0000FF">}</span><span style="color: #A31515">`</span><span style="color: #000000">)</span>
+<span style="color: #000000">  } </span><span style="color: #AF00DB">else</span><span style="color: #000000"> {</span>
+<span style="color: #000000">    </span><span style="color: #008000">// unknown error</span>
+<span style="color: #000000">    </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">error</span><span style="color: #000000">(</span><span style="color: #001080">error</span><span style="color: #000000">)</span>
+<span style="color: #000000">  }</span>
 <span style="color: #000000">})</span>
+</code></pre>
+			<a href="#use-async-functions" id="use-async-functions" style="color: inherit; text-decoration: none;">
+				<h2>Use async functions</h2>
+			</a>
+			<pre><code class="language-js"><span style="color: #0000FF">async</span><span style="color: #000000"> </span><span style="color: #0000FF">function</span><span style="color: #000000"> </span><span style="color: #795E26">send</span><span style="color: #000000">() {</span>
+<span style="color: #000000">  </span><span style="color: #AF00DB">try</span><span style="color: #000000"> {</span>
+<span style="color: #000000">    </span><span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">result</span><span style="color: #000000"> = </span><span style="color: #AF00DB">await</span><span style="color: #000000"> </span><span style="color: #001080">otp</span><span style="color: #000000">.</span><span style="color: #795E26">getStatus</span><span style="color: #000000">({ </span><span style="color: #001080">OTPReferenceID:</span><span style="color: #000000"> </span><span style="color: #098658">1628960593121007556</span><span style="color: #0000FF">n</span><span style="color: #000000"> })</span>
+<span style="color: #000000">    </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;Method: &#039;</span><span style="color: #000000"> + </span><span style="color: #001080">result</span><span style="color: #000000">.</span><span style="color: #001080">OTPMethod</span><span style="color: #000000">)</span>
+<span style="color: #000000">    </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;Status: &#039;</span><span style="color: #000000"> + </span><span style="color: #001080">result</span><span style="color: #000000">.</span><span style="color: #001080">OTPStatus</span><span style="color: #000000">)</span>
+<span style="color: #000000">    </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;Verified: &#039;</span><span style="color: #000000"> + </span><span style="color: #001080">result</span><span style="color: #000000">.</span><span style="color: #001080">OTPVerified</span><span style="color: #000000">)</span>
+<span style="color: #000000">  } </span><span style="color: #AF00DB">catch</span><span style="color: #000000"> (</span><span style="color: #001080">error</span><span style="color: #000000">) {</span>
+<span style="color: #000000">    </span><span style="color: #AF00DB">if</span><span style="color: #000000"> (</span><span style="color: #795E26">isGsOTPError</span><span style="color: #000000">(</span><span style="color: #001080">error</span><span style="color: #000000">)) {</span>
+<span style="color: #000000">      </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #A31515">`Error </span><span style="color: #0000FF">${</span><span style="color: #001080">error</span><span style="color: #000000FF">.</span><span style="color: #001080">code</span><span style="color: #0000FF">}</span><span style="color: #A31515">: </span><span style="color: #0000FF">${</span><span style="color: #001080">error</span><span style="color: #000000FF">.</span><span style="color: #001080">message</span><span style="color: #0000FF">}</span><span style="color: #A31515">`</span><span style="color: #000000">)</span>
+<span style="color: #000000">    } </span><span style="color: #AF00DB">else</span><span style="color: #000000"> {</span>
+<span style="color: #000000">      </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">error</span><span style="color: #000000">(</span><span style="color: #001080">error</span><span style="color: #000000">)</span>
+<span style="color: #000000">    }</span>
+<span style="color: #000000">  }</span>
+<span style="color: #000000">}</span>
+
+<span style="color: #795E26">send</span><span style="color: #000000">()</span>
 </code></pre>
 		</div>
 		<section class="tsd-panel-group tsd-index-group">
@@ -2796,6 +2831,7 @@ img {
 					<section class="tsd-index-section ">
 						<h3>Interfaces</h3>
 						<ul class="tsd-index-list">
+							<li class="tsd-kind-interface"><a href="interfaces/OTPError.html" class="tsd-kind-icon">OTPError</a></li>
 							<li class="tsd-kind-interface"><a href="interfaces/SendManualyInput.html" class="tsd-kind-icon">Send<wbr>Manualy<wbr>Input</a></li>
 							<li class="tsd-kind-interface"><a href="interfaces/SendAutomaticInput.html" class="tsd-kind-icon">Send<wbr>Automatic<wbr>Input</a></li>
 							<li class="tsd-kind-interface"><a href="interfaces/VerifyRequest.html" class="tsd-kind-icon">Verify<wbr>Request</a></li>
@@ -2811,6 +2847,12 @@ img {
 							<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#SendInput" class="tsd-kind-icon">Send<wbr>Input</a></li>
 						</ul>
 					</section>
+					<section class="tsd-index-section ">
+						<h3>Functions</h3>
+						<ul class="tsd-index-list">
+							<li class="tsd-kind-function"><a href="modules.html#isGsOTPError" class="tsd-kind-icon">is<wbr>GsOTPError</a></li>
+						</ul>
+					</section>
 				</div>
 			</section>
 		</section>
@@ -2822,7 +2864,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPMethod<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;sms&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;ivr&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;email&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;gap&quot;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L7">types.ts:7</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L7">types.ts:7</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -2837,7 +2879,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">OTPStatus<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;pending&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;sent&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;deliver&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;failed&quot;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L8">types.ts:8</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L8">types.ts:8</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2847,13 +2889,49 @@ img {
 				<div class="tsd-signature tsd-kind-icon">Send<wbr>Input&lt;IsManual&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IsManual</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type">true</span><span class="tsd-signature-symbol"> ? </span><a href="interfaces/SendManualyInput.html" class="tsd-signature-type" data-tsd-kind="Interface">SendManualyInput</a><span class="tsd-signature-symbol"> : </span><a href="interfaces/SendAutomaticInput.html" class="tsd-signature-type" data-tsd-kind="Interface">SendAutomaticInput</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/c418202/src/types.ts#L30">types.ts:30</a></li>
+						<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/types.ts#L33">types.ts:33</a></li>
 					</ul>
 				</aside>
 				<h4 class="tsd-type-parameters-title">Type parameters</h4>
 				<ul class="tsd-type-parameters">
 					<li>
 						<h4>IsManual<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span></h4>
+					</li>
+				</ul>
+			</section>
+		</section>
+		<section class="tsd-panel-group tsd-member-group ">
+			<h2>Functions</h2>
+			<section class="tsd-panel tsd-member tsd-kind-function">
+				<a name="isGsOTPError" class="tsd-anchor"></a>
+				<h3>is<wbr>GsOTPError</h3>
+				<ul class="tsd-signatures tsd-kind-function">
+					<li class="tsd-signature tsd-kind-icon">is<wbr>GsOTPError<span class="tsd-signature-symbol">(</span>error<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">error</span><span class="tsd-signature-symbol"> is </span><a href="interfaces/OTPError.html" class="tsd-signature-type" data-tsd-kind="Interface">OTPError</a></li>
+				</ul>
+				<ul class="tsd-descriptions">
+					<li class="tsd-description">
+						<aside class="tsd-sources">
+							<ul>
+								<li>Defined in <a href="https://github.com/GlobalSmartOTP/nodejs-lib/blob/2268680/src/index.ts#L15">index.ts:15</a></li>
+							</ul>
+						</aside>
+						<div class="tsd-comment tsd-typography">
+							<div class="lead">
+								<p>Check whether an error is a gsOTP standard error or not<br>
+								These objects has two fields: <code>code</code> and <code>message</code></p>
+							</div>
+						</div>
+						<h4 class="tsd-parameters-title">Parameters</h4>
+						<ul class="tsd-parameters">
+							<li>
+								<h5>error: <span class="tsd-signature-type">any</span></h5>
+								<div class="tsd-comment tsd-typography">
+									<p>The error object to check</p>
+								</div>
+							</li>
+						</ul>
+						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">error</span><span class="tsd-signature-symbol"> is </span><a href="interfaces/OTPError.html" class="tsd-signature-type" data-tsd-kind="Interface">OTPError</a></h4>
+						<p><code>error</code> is a standard gsOTP error</p>
 					</li>
 				</ul>
 			</section>
